fix : fix overflow

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,10 +9,9 @@ body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-  max-width: 100vw;
+  width: 100vw;
   box-sizing: border-box;
-  overflow-x: hidden;
-  border: 1px solid red;
+  overflow-x: hidden !important;
 }
 .menu-toggle {
   display: hidden;
@@ -32,7 +31,8 @@ body {
   border-bottom-right-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   height: 89vh;
-  width: 99vw;
+  width: 100vw;
+  overflow-x: hidden !important;
 }
 .jumbotron .bumping-effect img {
   width: 300px;
@@ -146,6 +146,7 @@ main.content {
   position: relative;
   overflow: auto;
   flex: 1;
+  overflow-x: hidden !important;
   border-radius: 10px;
 }
 .card:nth-child(2) {
@@ -164,6 +165,7 @@ aside {
   color: #fff;
   padding: 2rem;
   box-sizing: border-box;
+  overflow-x: hidden !important;
 }
 main aside article {
   align-self: center;
